fix(aligment): align readonly components with editable components in horizontal layouts #BQ-9504

--- a/src/app/modules/form-controls/selection-control/selection-control.component.scss
+++ b/src/app/modules/form-controls/selection-control/selection-control.component.scss
@@ -6,5 +6,6 @@ mat-error {
 }
 
 .selection-control {
+  padding: $bq-base-margin $bq-base-margin 0 $bq-base-margin;
   margin-bottom: 20px;
 }
